# vai

./: .gitignore  Cargo.toml  README.md
vai-cli/: Cargo.toml
vai-cli/src/: main.rs
vai-core/: Cargo.toml
vai-core/src/: asset.rs  container.rs  lib.rs  timeline.rs
vai-decoder/: Cargo.toml
vai-decoder/src/: avif_decoder.rs  frame_compositor.rs  lib.rs
vai-encoder/: Cargo.toml
vai-encoder/src/: avif_encoder.rs  ffmpeg_encoder.rs  lib.rs  progress_tracker.rs  scene_analyzer.rs  scene_detector.rs  video_reader.rs
vai-vlc-plugin/: Cargo.toml  README.md  build.rs  vlc_exports.map
vai-vlc-plugin/src/: lib.rs  vlc_bindings.rs  vlc_shim.c
