[package]
name = "vai-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for VAI video format: container format and data structures"

[dependencies]
thiserror.workspace = true
byteorder.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
