[package]
name = "vai-decoder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Decoder library for VAI video format"

[dependencies]
vai-core.workspace = true
thiserror.workspace = true
anyhow.workspace = true
image.workspace = true
libavif-image.workspace = true
